refactor: update dependencies and improve user details handling